Minor updates to make things clearer for blog post
Signed-off-by: russell-archer <russell.archer@mac.com>

--- a/PicSearch/Base.lproj/Main.storyboard
+++ b/PicSearch/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                                 </constraints>
                                 <state key="normal" title="Show Picture"/>
                                 <connections>
-                                    <action selector="showPictureTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1ko-Nu-KnB"/>
+                                    <action selector="showPictureTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ubM-HU-b45"/>
                                 </connections>
                             </button>
                         </subviews>
